# iita-agent-runtime

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.claude/skills/: README.md  runtime-arquitectura.md  runtime-fases-pendientes.md  runtime-frontend-integracion.md  runtime-shadow-mode.md
.claude/skills.local/: README.md
src/: __init__.py  agent.py  channels.py  config.py  db.py  main.py  management.py  test_payloads.py  tools.py  webhook.py
src/agents/: graph.py  state.py
src/agents/nodes/: agent_reasoning.py  context_assembly.py  response_evaluation.py
src/agents/tools/: __init__.py  escalate_to_human.py  search_courses.py
src/channels/: __init__.py  gateway.py  sender.py
src/media/: processor.py
tests/: test_health.py
